--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,176 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  background-image: linear-gradient(120deg, #659df6 0%, #260367 100%);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
+}
+header {
+  font-size: 5rem;
 }
 
-.App-logo {
-  height: 40vmin;
+header{
+  min-height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+form {
+  min-height: 15vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+  
+
+}
+form input{
+  padding: 0.5rem;
+  font-size: 2rem;
+  height: 50px;
+  border: none;
+  background: white;
+}
+
+form button {
+  padding: 0.5rem;
+  font-size: 2rem;
+  height: 50px;
+  border: none;
+  background: white;
+}
+form button {
+  color: #ce64e8;
+  background: #f7fffe;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+form button:hover {
+  background: #ce64e8;
+  color: white;
+}
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  background: white;
+  font-size: 1.5rem;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 1s ease;
+}
+.filter-todo {
+  padding: 1rem;
+  width: 160px;
+}
+.todo li {
+  flex: 1;
+}
+
+.trash-btn,
+.complete-btn {
+  background: #ce64e8;
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+}
+.complete-btn {
+  background: rgb(17, 116, 203);
+}
+.todo-item {
+  padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check {
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fall {
+  transform: translateY(10rem) rotateZ(20deg);
+  opacity: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.completed {
+  text-decoration: line-through;
+  color: #00245d;
+  opacity: 0.2;
+  
 }
 
-.App-link {
-  color: #61dafb;
+/*CUSTOM SELECTOR */
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background-image: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Custom Select */
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
 }
+select {
+  color: #ce64e8;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  height: 50px;
+}
+.select-buttons {
+  color: black;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  width: 12rem;
+}
+/* Arrow */
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  background: #ce64e8;
+  cursor: pointer;
+  pointer-events: none;
+}
+/* Transition */
+/* 
+  .select:hover::after {
+    transform: scale(1.5);
+  }
+  */
+
+  .itemcontainer{
+    align-items: center;
+    display: grid;
+    justify-content: space-around;
+  }
